Layout bugfixes

--- a/css/astro.css
+++ b/css/astro.css
@@ -2,7 +2,7 @@
     width: 100vw;
     max-width: 800px;
     object-fit: contain;
-    margin-top: min(40vw, 400px);
+    margin-top: min(8vw, 80px);
 }
 .caption {
     width: 100vw;
@@ -16,5 +16,5 @@
     padding: 0 42px;
     max-width: 700px;
     text-align: left;
-    margin-bottom: 256px;
+    margin-top: min(8vw, 80px);
 }
