--- a/css/default.css
+++ b/css/default.css
@@ -8,12 +8,14 @@ html {
 
     width: 100vw;
     height: 100vh;
-    overflow: hidden;
+
+    scrollbar-color: white black;
+    scrollbar-width: thin;
 }
 
 .container {
-    wdith: 100vw;
-    height: 100vh;
+    wdith: 100%;
+    height: 100%;
 }
 
 .fira-code {
@@ -70,6 +72,7 @@ html {
 
 .nav-header {
     display: flex;
+    position: fixed;
     flex-direction: row;
     align-items: center;
     width: 100%;
@@ -80,7 +83,7 @@ html {
 }
 .nav-footer {
     display: flex;
-    position: absolute;
+    position: fixed;
     flex-direction: row;
     justify-content: space-around;
     width: 100%;
@@ -133,15 +136,8 @@ html {
 }
 
 .content {
-    padding: 16px;
+    padding: 64px 16px;
     width: calc(100% - 32px);
-    height: calc(100% - 90px);
-
-    overflow-x: hidden;
-    overflow-y: scroll;
-
-    scrollbar-color: white black;
-    scrollbar-width: thin;
 }
 .centered {
     display: flex;
